italicize paper title

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -153,7 +153,7 @@
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Matlab GUI development to demonstrate a given paper.
-  \item Paper title: Single-Image Super-Resolution Based on Rational Fractal Interpolation.
+    \item Paper title: \textit{Single-Image Super-Resolution Based on Rational Fractal Interpolation}
   
 \end{itemize}
 
